--- a/app/bundles/cDock.bundle/Contents/Info.plist
+++ b/app/bundles/cDock.bundle/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>14C81f</string>
+	<string>14D72i</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
