generic text here

--- a/app/bundles/ColorfulSidebar.bundle/Contents/Resources/icons.plist
+++ b/app/bundles/ColorfulSidebar.bundle/Contents/Resources/icons.plist
@@ -2,20 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>/System/Library/CoreServices/AppDownloadLauncher.app/Contents/Resources/appStore.icns</key>
+	<key>tAps</key>
 	<array>
 		<string>/Applications</string>
 		<string>~/Applications</string>
 	</array>
-	<key>/System/Library/PreferencePanes/Displays.prefPane/Contents/Resources/Displays.icns</key>
+	<key>tDsk</key>
 	<array>
 		<string>~/Desktop</string>
 	</array>
-	<key>/Applications/iBooks.app/Contents/Resources/iBooksAppIcon.icns</key>
+	<key>tDoc</key>
 	<array>
 		<string>~/Documents</string>
 	</array>
-	<key>/System/Library/CoreServices/CoreTypes.bundle/Contents/Resources/DownloadsFolder.icns</key>
+	<key>tDwn</key>
 	<array>
 		<string>~/Downloads</string>
 	</array>
@@ -23,6 +23,18 @@
 	<array>
 		<string>/Library</string>
 		<string>~/Library</string>
+	</array>
+	<key>tMov</key>
+	<array>
+		<string>~/Movies</string>
+	</array>
+	<key>tMus</key>
+	<array>
+		<string>~/Music</string>
+	</array>
+	<key>tPic</key>
+	<array>
+		<string>~/Pictures</string>
 	</array>
 	<key>tPub</key>
 	<array>
@@ -36,36 +48,33 @@
 	<array>
 		<string>/Applications/Utilities</string>
 	</array>
-	<key>idsk</key>
+	<key>/System/Library/CoreServices/CoreTypes.bundle/Contents/Resources/iDiskGenericIcon.icns</key>
 	<array>
 		<string>iDisk</string>
 	</array>
-	<key>/System/Library/CoreServices/CoreTypes.bundle/Contents/Resources/iDiskGenericIcon.icns</key>
-	<array>
-		<string>x-applefinder-vnode:CloudDocs%20libraries</string>
-	</array>
 	<key>/System/Library/CoreServices/CoreTypes.bundle/Contents/Resources/AirDrop.icns</key>
 	<array>
-		<string>x-applefinder-vnode:AirDrop</string>
+		<string>nwnode://domain-AirDrop</string>
 	</array>
 	<key>/System/Library/CoreServices/CoreTypes.bundle/Contents/Resources/CDAudioVolumeIcon.icns</key>
 	<array>
-		<string>x-applefinder-vnode:Remote%20Disc</string>
+		<string>nwnode://domain-Remote%20Disc</string>
 	</array>
-	<key>NSMediaBrowserMediaTypeAudio</key>
+	<key>/System/Library/CoreServices/CoreTypes.bundle/Contents/Resources/ToolbarMusicFolderIcon.icns</key>
 	<array>
-		<string>~/Music</string>
 		<string>NSMediaBrowserMediaTypeAudioTemplate32</string>
 	</array>
 	<key>NSMediaBrowserMediaTypePhotos</key>
 	<array>
-		<string>~/Pictures</string>
 		<string>NSMediaBrowserMediaTypePhotosTemplate32</string>
 	</array>
 	<key>NSMediaBrowserMediaTypeMovies</key>
 	<array>
-		<string>~/Movies</string>
 		<string>NSMediaBrowserMediaTypeMoviesTemplate32</string>
+	</array>
+	<key>/System/Library/CoreServices/CoreTypes.bundle/Contents/Resources/MobileMe.icns</key>
+	<array>
+		<string>iCloud Drive</string>
 	</array>
 </dict>
 </plist>
