--- a/app/support/themes/Custom/Custom.plist
+++ b/app/support/themes/Custom/Custom.plist
@@ -3,19 +3,19 @@
 <plist version="1.0">
 <dict>
 	<key>cd_customIndicator</key>
-	<false/>
+	<true/>
 	<key>cd_darkenMouseOver</key>
 	<true/>
 	<key>cd_dockBG</key>
-	<false/>
+	<true/>
 	<key>cd_dockBGA</key>
-	<integer>0</integer>
+	<integer>35</integer>
 	<key>cd_dockBGB</key>
-	<integer>0</integer>
+	<integer>25</integer>
 	<key>cd_dockBGG</key>
-	<integer>0</integer>
+	<integer>25</integer>
 	<key>cd_dockBGR</key>
-	<real>0.0</real>
+	<integer>150</integer>
 	<key>cd_fullWidth</key>
 	<false/>
 	<key>cd_hideLabels</key>
@@ -23,29 +23,29 @@
 	<key>cd_iconReflection</key>
 	<false/>
 	<key>cd_iconShadow</key>
-	<false/>
-	<key>cd_iconShadowBGA</key>
-	<integer>0</integer>
-	<key>cd_iconShadowBGB</key>
-	<integer>0</integer>
-	<key>cd_iconShadowBGG</key>
-	<integer>0</integer>
-	<key>cd_iconShadowBGR</key>
-	<real>0.0</real>
-	<key>cd_iconShadowBGS</key>
-	<integer>0</integer>
-	<key>cd_labelBG</key>
-	<false/>
-	<key>cd_labelBGA</key>
-	<integer>0</integer>
-	<key>cd_labelBGB</key>
-	<real>0.0</real>
-	<key>cd_labelBGG</key>
-	<real>0.0</real>
-	<key>cd_labelBGR</key>
-	<integer>0</integer>
-	<key>cd_pictureBG</key>
 	<true/>
+	<key>cd_iconShadowBGA</key>
+	<integer>25</integer>
+	<key>cd_iconShadowBGB</key>
+	<integer>155</integer>
+	<key>cd_iconShadowBGG</key>
+	<integer>255</integer>
+	<key>cd_iconShadowBGR</key>
+	<integer>155</integer>
+	<key>cd_iconShadowBGS</key>
+	<integer>10</integer>
+	<key>cd_labelBG</key>
+	<true/>
+	<key>cd_labelBGA</key>
+	<integer>35</integer>
+	<key>cd_labelBGB</key>
+	<integer>55</integer>
+	<key>cd_labelBGG</key>
+	<integer>100</integer>
+	<key>cd_labelBGR</key>
+	<integer>220</integer>
+	<key>cd_pictureBG</key>
+	<false/>
 	<key>cd_pictureTile</key>
 	<false/>
 	<key>cd_showFrost</key>
@@ -53,6 +53,6 @@
 	<key>cd_showGlass</key>
 	<false/>
 	<key>cd_showSeparator</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
