--- a/app/support/themes/Editors Choice/Editors Choice.plist
+++ b/app/support/themes/Editors Choice/Editors Choice.plist
@@ -7,52 +7,52 @@
 	<key>cd_darkenMouseOver</key>
 	<true/>
 	<key>cd_dockBG</key>
-	<false/>
+	<true/>
 	<key>cd_dockBGA</key>
-	<integer>0</integer>
+	<integer>15</integer>
 	<key>cd_dockBGB</key>
-	<integer>0</integer>
+	<integer>255</integer>
 	<key>cd_dockBGG</key>
-	<integer>0</integer>
+	<integer>110</integer>
 	<key>cd_dockBGR</key>
-	<real>0.0</real>
+	<integer>255</integer>
 	<key>cd_fullWidth</key>
-	<false/>
+	<true/>
 	<key>cd_hideLabels</key>
-	<false/>
+	<true/>
 	<key>cd_iconReflection</key>
 	<false/>
 	<key>cd_iconShadow</key>
-	<false/>
+	<true/>
 	<key>cd_iconShadowBGA</key>
-	<integer>0</integer>
+	<integer>45</integer>
 	<key>cd_iconShadowBGB</key>
-	<integer>0</integer>
+	<integer>255</integer>
 	<key>cd_iconShadowBGG</key>
 	<integer>0</integer>
 	<key>cd_iconShadowBGR</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>cd_iconShadowBGS</key>
-	<integer>0</integer>
+	<integer>10</integer>
 	<key>cd_labelBG</key>
-	<false/>
-	<key>cd_labelBGA</key>
-	<integer>0</integer>
-	<key>cd_labelBGB</key>
-	<real>0.0</real>
-	<key>cd_labelBGG</key>
-	<real>0.0</real>
-	<key>cd_labelBGR</key>
-	<integer>0</integer>
-	<key>cd_pictureBG</key>
 	<true/>
+	<key>cd_labelBGA</key>
+	<integer>25</integer>
+	<key>cd_labelBGB</key>
+	<integer>255</integer>
+	<key>cd_labelBGG</key>
+	<integer>120</integer>
+	<key>cd_labelBGR</key>
+	<integer>120</integer>
+	<key>cd_pictureBG</key>
+	<false/>
 	<key>cd_pictureTile</key>
 	<false/>
 	<key>cd_showFrost</key>
-	<false/>
+	<true/>
 	<key>cd_showGlass</key>
 	<false/>
 	<key>cd_showSeparator</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
