--- a/app/support/themes/Unity Nite (3D)/Unity Nite (3D).plist
+++ b/app/support/themes/Unity Nite (3D)/Unity Nite (3D).plist
@@ -15,7 +15,7 @@
 	<key>cd_dockBGG</key>
 	<integer>0</integer>
 	<key>cd_dockBGR</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>cd_fullWidth</key>
 	<false/>
 	<key>cd_hideLabels</key>
@@ -23,27 +23,27 @@
 	<key>cd_iconReflection</key>
 	<false/>
 	<key>cd_iconShadow</key>
-	<false/>
+	<true/>
 	<key>cd_iconShadowBGA</key>
-	<integer>0</integer>
+	<integer>45</integer>
 	<key>cd_iconShadowBGB</key>
-	<integer>0</integer>
+	<integer>80</integer>
 	<key>cd_iconShadowBGG</key>
-	<integer>0</integer>
+	<integer>160</integer>
 	<key>cd_iconShadowBGR</key>
-	<real>0.0</real>
+	<integer>235</integer>
 	<key>cd_iconShadowBGS</key>
-	<integer>0</integer>
+	<integer>5</integer>
 	<key>cd_labelBG</key>
-	<false/>
+	<true/>
 	<key>cd_labelBGA</key>
-	<integer>0</integer>
+	<integer>75</integer>
 	<key>cd_labelBGB</key>
-	<real>0.0</real>
+	<integer>80</integer>
 	<key>cd_labelBGG</key>
-	<real>0.0</real>
+	<integer>160</integer>
 	<key>cd_labelBGR</key>
-	<integer>0</integer>
+	<integer>235</integer>
 	<key>cd_pictureBG</key>
 	<true/>
 	<key>cd_pictureTile</key>
