--- a/app/support/themes/Editors Choice/Editors Choice.plist
+++ b/app/support/themes/Editors Choice/Editors Choice.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>cd_cornerRadius</key>
+	<integer>0</integer>
+	<key>cd_darkMode</key>
+	<integer>0</integer>
 	<key>cd_customIndicator</key>
 	<false/>
 	<key>cd_darkenMouseOver</key>
