Updated about menu and added donate option

--- a/app/helpers/cDock-Menubar.app/Contents/Info.plist
+++ b/app/helpers/cDock-Menubar.app/Contents/Info.plist
@@ -46,5 +46,7 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>CFBundleIconFile</key>
+	<string>../../../../appIcon.icns</string>
 </dict>
 </plist>
