--- a/app/support/themes/Old School Cool/Old School Cool.plist
+++ b/app/support/themes/Old School Cool/Old School Cool.plist
@@ -3,47 +3,49 @@
 <plist version="1.0">
 <dict>
 	<key>cd_customIndicator</key>
-	<false/>
+	<true/>
+	<key>cd_darkMode</key>
+	<integer>2</integer>
 	<key>cd_darkenMouseOver</key>
 	<true/>
 	<key>cd_dockBG</key>
 	<false/>
 	<key>cd_dockBGA</key>
-	<integer>0</integer>
+	<integer>35</integer>
 	<key>cd_dockBGB</key>
-	<integer>0</integer>
+	<integer>25</integer>
 	<key>cd_dockBGG</key>
-	<integer>0</integer>
+	<integer>25</integer>
 	<key>cd_dockBGR</key>
-	<real>0</real>
+	<integer>150</integer>
 	<key>cd_fullWidth</key>
 	<false/>
 	<key>cd_hideLabels</key>
 	<false/>
 	<key>cd_iconReflection</key>
-	<false/>
+	<true/>
 	<key>cd_iconShadow</key>
-	<false/>
+	<true/>
 	<key>cd_iconShadowBGA</key>
-	<integer>0</integer>
+	<integer>25</integer>
 	<key>cd_iconShadowBGB</key>
-	<integer>0</integer>
+	<integer>155</integer>
 	<key>cd_iconShadowBGG</key>
-	<integer>0</integer>
+	<integer>255</integer>
 	<key>cd_iconShadowBGR</key>
-	<real>0</real>
+	<integer>155</integer>
 	<key>cd_iconShadowBGS</key>
-	<integer>0</integer>
+	<integer>5</integer>
 	<key>cd_labelBG</key>
-	<false/>
+	<true/>
 	<key>cd_labelBGA</key>
-	<integer>0</integer>
+	<integer>35</integer>
 	<key>cd_labelBGB</key>
-	<real>0</real>
+	<integer>55</integer>
 	<key>cd_labelBGG</key>
-	<real>0</real>
+	<integer>100</integer>
 	<key>cd_labelBGR</key>
-	<integer>0</integer>
+	<integer>220</integer>
 	<key>cd_pictureBG</key>
 	<false/>
 	<key>cd_pictureTile</key>
