--- a/app/support/themes/Unity Nite (3D)/Unity Nite (3D).plist
+++ b/app/support/themes/Unity Nite (3D)/Unity Nite (3D).plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>cd_darkMode</key>
+	<integer>2</integer>
 	<key>cd_customIndicator</key>
 	<false/>
 	<key>cd_darkenMouseOver</key>
