--- a/app/support/themes/Clean (3D)/Clean (3D).plist
+++ b/app/support/themes/Clean (3D)/Clean (3D).plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>cd_is3D</key>
+	<true/>
 	<key>cd_customIndicator</key>
 	<false/>
 	<key>cd_darkenMouseOver</key>
