--- a/app/support/themes/Editors Choice/Editors Choice.plist
+++ b/app/support/themes/Editors Choice/Editors Choice.plist
@@ -2,32 +2,34 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>cd_colorIndicator</key>
+	<true/>
 	<key>cd_cornerRadius</key>
-	<integer>0</integer>
-	<key>cd_darkMode</key>
 	<integer>0</integer>
 	<key>cd_customIndicator</key>
 	<false/>
+	<key>cd_darkMode</key>
+	<integer>0</integer>
 	<key>cd_darkenMouseOver</key>
 	<true/>
 	<key>cd_dockBG</key>
 	<true/>
 	<key>cd_dockBGA</key>
-	<integer>15</integer>
+	<real>50</real>
 	<key>cd_dockBGB</key>
-	<integer>255</integer>
+	<real>255</real>
 	<key>cd_dockBGG</key>
-	<integer>110</integer>
+	<real>196.39372253417969</real>
 	<key>cd_dockBGR</key>
-	<integer>255</integer>
+	<real>87.548782348632812</real>
 	<key>cd_fullWidth</key>
 	<true/>
 	<key>cd_hideLabels</key>
-	<true/>
+	<false/>
 	<key>cd_iconReflection</key>
 	<false/>
 	<key>cd_iconShadow</key>
-	<true/>
+	<false/>
 	<key>cd_iconShadowBGA</key>
 	<integer>45</integer>
 	<key>cd_iconShadowBGB</key>
@@ -35,28 +37,50 @@
 	<key>cd_iconShadowBGG</key>
 	<integer>0</integer>
 	<key>cd_iconShadowBGR</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>cd_iconShadowBGS</key>
 	<integer>10</integer>
+	<key>cd_indicatorBGA</key>
+	<real>100</real>
+	<key>cd_indicatorBGB</key>
+	<real>71.624671936035156</real>
+	<key>cd_indicatorBGG</key>
+	<real>249.02947998046875</real>
+	<key>cd_indicatorBGR</key>
+	<real>255</real>
+	<key>cd_indicatorHeight</key>
+	<integer>3</integer>
+	<key>cd_indicatorWidth</key>
+	<integer>8</integer>
 	<key>cd_labelBG</key>
 	<true/>
 	<key>cd_labelBGA</key>
-	<integer>45</integer>
+	<real>45.490303039550781</real>
 	<key>cd_labelBGB</key>
-	<integer>176</integer>
+	<real>71.624671936035156</real>
 	<key>cd_labelBGG</key>
-	<integer>232</integer>
+	<real>249.02947998046875</real>
 	<key>cd_labelBGR</key>
-	<integer>142</integer>
+	<real>255</real>
 	<key>cd_pictureBG</key>
 	<false/>
 	<key>cd_pictureTile</key>
 	<false/>
+	<key>cd_shadowBGA</key>
+	<real>0.0</real>
+	<key>cd_shadowBGB</key>
+	<real>0.0</real>
+	<key>cd_shadowBGG</key>
+	<real>0.0</real>
+	<key>cd_shadowBGR</key>
+	<real>0.0</real>
 	<key>cd_showFrost</key>
 	<true/>
 	<key>cd_showGlass</key>
 	<false/>
 	<key>cd_showSeparator</key>
+	<true/>
+	<key>cd_sizeIndicator</key>
 	<true/>
 </dict>
 </plist>
